associate movie detail fragments with UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MovieDetailsActivity"
+        <activity android:name=".details.MovieDetailsActivity"
             android:parentActivityName=".MainActivity"
             tools:targetApi="jelly_bean" />
 
