--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
         versionName "1.0"
         buildConfigField("String", "API_KEY", API_KEY)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables
+                {
+                    useSupportLibrary = true
+                }
     }
 
 
