--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".activities.DetailsActivity"
+        <activity android:name=".activities.FavoritesActivity"></activity>
+        <activity
+            android:name=".activities.DetailsActivity"
             android:parentActivityName=".activities.MainActivity"
             tools:targetApi="jelly_bean" />
-
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
